@@ -1,3 +1,9 @@
+2010-05-17  Joe English  <jenglish@users.sourceforge.net>
+
+	* generic/tkBind.c: Revert [Patch #2999920], as it entails an
+	incompatible change to the C API is and is the cause of
+	[Bug #3002768].
+
 2010-05-17  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* generic/tkBind.c    [Patch #2999920]: Optimize Internal Virtual event
